--- a/02_program_structure/exercises.html
+++ b/02_program_structure/exercises.html
@@ -4,13 +4,13 @@
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Eloquent JS chapter 2 excercise solutions</title>
+  <title>Eloquent JS chapter 2 exercise solutions</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script src="main.js"></script>
 </head>
 
 <body>
-  <h1>Eloquent JS chapter 2 excercise solutions</h1>
+  <h1>Eloquent JS chapter 2 exercise solutions</h1>
   <p>See console!</p>
 </body>
 
