--- a/07_robot/a_robot.html
+++ b/07_robot/a_robot.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Eloquent JS Chapter 7 Project: A Robot</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <script src="animatevillage.js"></script>
   <script src="main.js"></script>
 </head>
 
